realtime-tab-options

--- a/server_www/index.html
+++ b/server_www/index.html
@@ -217,7 +217,17 @@
 				</div>
 			</form>
 	</div>
-		
+
+    <div data-role="popup" id="popupSensorMenu" data-theme="a" class="ui-corner-all">
+			<form>
+				<div style="padding:10px 20px;">
+				  <h3>Sensor Menu</h3>
+		    	  <a href="#" data-role="button" id="single_sensor_history" data-icon="check" >Show History</a>
+		    	  <a href="#" data-role="button" id="sensor_name_form" data-icon="check" >Edit sensor label</a>
+				</div>
+			</form>
+	</div>	
+	
     <div data-role="popup" id="popup_custom_period" data-theme="a" class="ui-corner-all">
 			<form>
 				<div style="padding:10px 20px;">
