--- a/server_www/index.html
+++ b/server_www/index.html
@@ -221,9 +221,10 @@
     <div data-role="popup" id="popupSensorMenu" data-theme="a" class="ui-corner-all">
 			<form>
 				<div style="padding:10px 20px;">
-				  <h3>Sensor Menu</h3>
-		    	  <a href="#" data-role="button" id="single_sensor_history" data-icon="check" >Show History _ToDo :)</a>
-		    	  <a href="#" data-role="button" id="sensor_name_form" data-icon="check" >Edit sensor label _ToDo</a>
+				  <h3 id=sensor_menu_title>Sensor Menu</h3>
+				  
+		    	  <a href="#" data-role="button" id="single_sensor_history" data-icon="search" >Show Sensor readings</a>
+		    	  <a href="#" data-role="button" id="sensor_name_form" data-icon="edit" >Edit sensor label _ToDo</a>
 				</div>
 			</form>
 	</div>	
