added communication encryption

--- a/server_www/index.html
+++ b/server_www/index.html
@@ -74,7 +74,7 @@
 		
 		<div> 
 			<a href="#" onclick="web_log_in();" data-role="button" id="logon_button" data-icon="lock" >Go</a>
-
+			<a href="#" data-role="button" id="test_button" data-icon="star" >test</a>
 		</div>
 	</div>
 	
@@ -255,8 +255,8 @@
 		
 <script src="js/remote_pi.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
-  
-  
+<script type="text/javascript" src="js/jquery.jcryption.3.1.0.js"></script>
+ 
   
  <!-- 
 	<script src="js/remote_pi_APP.js"></script>
@@ -275,6 +275,9 @@ else {
 	document.writeln("<script type='text/javascript' src='js/remote_pi_WEB.js'><\/script>");
 }
 </script>
+ 
+ <script src="js/json_encrypted_API.js"></script>   
+ 
  
 </body>
 </html>
