--- a/server_www/index.html
+++ b/server_www/index.html
@@ -46,7 +46,7 @@
 		</div>
 		
 		<div> 
-			<a href="#" onclick="web_log_in();" data-role="button" id="logon_button" data-icon="lock" >Go</a>
+			<a href="#"  data-role="button" id="logon_button" data-icon="lock" >Go</a>
 		</div>
 	</div>
 	
