--- a/server_www/index.html
+++ b/server_www/index.html
@@ -171,7 +171,16 @@
 		
 		 	<div id="the_remote_content">
 				<div id="realtime_tab"></div>
-				<div id="historical_data_tab"></div>
+				<div id="historical_data_tab">
+					<div id="graph"></div>
+					<div id="graph_options">
+					 
+					
+   
+
+
+					</div>
+				</div>
 				<div id="pins_tab"></div>
 				<div id="trigger_tab"></div>
 			</div>
