--- a/server_www/index.html
+++ b/server_www/index.html
@@ -173,13 +173,7 @@
 				<div id="realtime_tab"></div>
 				<div id="historical_data_tab">
 					<div id="graph"></div>
-					<div id="graph_options">
-					 
-					
-   
-
-
-					</div>
+					<div id="graph_options"></div>
 				</div>
 				<div id="pins_tab"></div>
 				<div id="trigger_tab"></div>
@@ -278,9 +272,12 @@
  
 <!-- End of  Trigger data Page  ------------------------------------------------------------------------------->
 
-
+<!--
  
 <script type="text/javascript" src="js/jquery.jcryption.3.1.0.js"></script>  
+
+-->
+
 <script type="text/javascript" src="js/json_encrypted_API.js"></script> 
 
 <script type="text/javascript" src="js/remote_pi.js"></script>
